insertado de font-family en las letras

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 	<title>Movies for Categories</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
+	<link rel="stylesheet" href="<link href='https://fonts.googleapis.com/css?family=Roboto+Slab' rel='stylesheet' type='text/css'>">
+	<link rel="stylesheet" href="<link href='https://fonts.googleapis.com/css?family=Gloria+Hallelujah' rel='stylesheet' type='text/css'>">
 	<link rel="stylesheet" href="css/main.css">
 </head>
 <body>
